# mini-python-projects

./: README.md
01-guess-the-number-game/: README.md  flake.nix  main.py  pyproject.toml
01_guess_the_number_game/: README.md
02-calc-cli/: main.py  pyproject.toml  requirements.txt
02-calc-cli/src/calc/: cli.py  core.py
02_calc_cli/: README.md  pyproject.toml
03-todos-cli/: .gitignore  README.md  flake.nix  pyproject.toml
03-todos-cli/src/todos/: cli.py  db.py
04-contact-book/src/contacts/: cli.py  core.py  storage.py  utils.py
