[project]
name = "calc-cli"
version = "0.2.2"
description = "A simple CLI calculator built with Python"
authors = [{ name = "Shubham V" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

[project.scripts]
calc = "calc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
